--- a/src/route/IndexPage/Section/Projects/Projects.style.scss
+++ b/src/route/IndexPage/Section/Projects/Projects.style.scss
@@ -45,6 +45,10 @@
             justify-content: space-between;
             gap: 2rem;
 
+            @include mobile {
+                gap: 1rem;
+            }
+
             >p,
             >legend {
                 font-size: 1.25rem;
@@ -79,7 +83,7 @@
         }
 
         &:not(.IS_EXPANDED) {
-            height: 3.75rem;
+            // height: 3.75rem;
             overflow: hidden;
 
             @include mobile {
@@ -96,6 +100,10 @@
                 >p,
                 >legend {
                     margin-block-end: 0;
+
+                    @include mobile {
+                        padding-block: 1rem;
+                    }
                 }
 
                 >button>.Icon {
@@ -134,7 +142,7 @@
                 }
 
                 @include mobile {
-                    gap: 2rem;
+                    gap: 1rem;
                 }
 
                 >.Help {
