--- a/src/route/Project/Project.style.scss
+++ b/src/route/Project/Project.style.scss
@@ -56,6 +56,7 @@
     &-Content {
         display: flex;
         justify-content: space-between;
+        margin-block-end: 2rem;
 
         >a {
             >.Icon {
